--- a/InzApp/templates/InzApp/bibliografia.html
+++ b/InzApp/templates/InzApp/bibliografia.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Bibliografia</h1>
+	Bibliografia
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Witaj na podstronie z bibliografią.</p>
+	Witaj na podstronie z bibliografią.
 	{% endblock %}
 	
 	{% block strona %}
