--- a/InzApp/templates/InzApp/dodaj_publikacje.html
+++ b/InzApp/templates/InzApp/dodaj_publikacje.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Dodaj nową publikację</h1>
+	Dodaj nową publikację
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Tutaj możesz dodać nową publikację naukową.</p>
+	Tutaj możesz dodać nową publikację naukową.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
