--- a/InzApp/templates/InzApp/edytuj_publikacje.html
+++ b/InzApp/templates/InzApp/edytuj_publikacje.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Edytuj publikację</h1>
+	Edytuj publikację
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Tutaj możesz edytować publikację naukową.</p>
+	Tutaj możesz edytować publikację naukową.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
