--- a/InzApp/templates/InzApp/kolekcja.html
+++ b/InzApp/templates/InzApp/kolekcja.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Kolekcja: {{ nazwa }}</h1>
+	Kolekcja: {{ nazwa }}
 	{% endblock %}
 	
 	{% block opis %}
-	<p>{{ opis }}.</p>
+	{{ opis }}.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
