--- a/InzApp/templates/InzApp/kolekcje.html
+++ b/InzApp/templates/InzApp/kolekcje.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Kolekcje</h1>
+	Kolekcje
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Zbiór wszystkich kolekcji.</p>
+	Zbiór wszystkich kolekcji.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
