--- a/InzApp/templates/InzApp/publikacja.html
+++ b/InzApp/templates/InzApp/publikacja.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Publikacja</h1>
+	Publikacja
 	{% endblock %}
 	
 	{% block opis %}
-	<p>{{ rodzaj }}, nauki {{ dziedzina }}.</p>
+	{{ rodzaj }}, nauki {{ dziedzina }}.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
