--- a/InzApp/templates/InzApp/uzytkownicy.html
+++ b/InzApp/templates/InzApp/uzytkownicy.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Użytkownicy</h1>
+	Użytkownicy
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Tutaj możesz zarządzać użytkownikami aplikacji.</p>
+	Tutaj możesz zarządzać użytkownikami aplikacji.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
