--- a/InzApp/templates/InzApp/dodaj_publikacje_do_kolekcji.html
+++ b/InzApp/templates/InzApp/dodaj_publikacje_do_kolekcji.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Dodaj publikację do kolekcji: {{ kolekcja.nazwa_kolekcji }}</h1>
+	Dodaj publikację do kolekcji: {{ kolekcja.nazwa_kolekcji }}
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Tutaj możesz dołączyć publikację do swojej kolekcji.</p>
+	Tutaj możesz dołączyć publikację do swojej kolekcji.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
@@ -30,30 +30,30 @@
 		ustaw_aktywny_w_menu(5);
 	</script> 
 	
-	<div>
-		<table>
-			<form action="{% url 'dodaj_nowa_publikacje_do_kolekcji' %}" method="post">
-				{% csrf_token %}
-				<input type="hidden" name="publikacja_do_kolekcji_id_uzytkownika" 
-					value="{{ zalogowany.id }}" />
-				<input type="hidden" name="publikacja_do_kolekcji_id_kolekcji" 
-					value="{{ kolekcja.id }}" />
-				<tr>
-					<td>Wybierz publikację</td>
-					<td>
-						<select name="publikacja_do_kolekcji_id_publikacji"
-							id="publikacja_do_kolekcji_id_publikacji">
-							{% for publikacja in publikacje %}
-							<option value="{{ publikacja.id }}">
-							{{ publikacja.tytul }} ({{ publikacja.autor.imie }} {{ publikacja.autor.nazwisko }})
-							</option>
-							{% endfor %}
-						</select>
-					</td>
-					<td><input type="submit" value="Dodaj"></td>
-				</tr>
-			</form>
-		</table>
-	</div>
+	
+	<table>
+		<form action="{% url 'dodaj_nowa_publikacje_do_kolekcji' %}" method="post">
+			{% csrf_token %}
+			<input type="hidden" name="publikacja_do_kolekcji_id_uzytkownika" 
+				value="{{ zalogowany.id }}" />
+			<input type="hidden" name="publikacja_do_kolekcji_id_kolekcji" 
+				value="{{ kolekcja.id }}" />
+			<tr>
+				<td>Wybierz publikację</td>
+				<td>
+					<select name="publikacja_do_kolekcji_id_publikacji"
+						id="publikacja_do_kolekcji_id_publikacji">
+						{% for publikacja in publikacje %}
+						<option value="{{ publikacja.id }}">
+						{{ publikacja.tytul }} ({{ publikacja.autor.imie }} {{ publikacja.autor.nazwisko }})
+						</option>
+						{% endfor %}
+					</select>
+				</td>
+				<td><input type="submit" value="Dodaj"></td>
+			</tr>
+		</form>
+	</table>
+	
 	{% endblock %}
 	
