--- a/InzApp/templates/InzApp/moje_kolekcje.html
+++ b/InzApp/templates/InzApp/moje_kolekcje.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Moje kolekcje</h1>
+	Moje kolekcje
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Zbiór moich kolekcji.</p>
+	Zbiór moich kolekcji.
 	{% endblock %}
 	
 	{% block strona %}
@@ -22,39 +22,39 @@
 		ustaw_aktywny_w_menu(5);
 	</script> 
 	
-	<div>
-		<table>
-		
-		{% for kolekcja in kolekcje %}
-			<tr>
-				<td>
-					{{ forloop.counter }}. <!-- licznik foreach template-->
-				</td>
-				<td>
-					<a href="{% url 'kolekcja' kolekcja.id %}" style="color: #8c3c55; font-style: italic;">{{ kolekcja.nazwa_kolekcji }}</a> </br>
-					{{ kolekcja.opis }} </br>
-					utworzono: {{ kolekcja.data_utworzenia }} </br>
-					zmodyfikowano: {{ kolekcja.data_modyfikacji }}
-				</td>
-				<td>
-					<a href="{% url 'edytuj_kolekcje' kolekcja.id %}">
-					<i class="fa fa-pencil-square-o fa-fw"></i>
-					Edytuj</a>
-				</td>
-				<td>
-					<a href="{% url 'usun_kolekcje' kolekcja.id %}" onClick="return confirm('Czy na pewno chcesz usunąć tą kolekcję?');">
-					<i class="fa fa-trash fa-fw"></i>
-					Usuń</a>
-				</td>
-				<td>
-					<a href="{% url 'kolekcja' kolekcja.id %}">
-					<i class="fa fa-eye fa-fw"></i>
-					Zobacz</a>
-				</td>
-			</tr>
-		{% endfor %}
-		</table>
-	</div>
+	
+	<table>
+	
+	{% for kolekcja in kolekcje %}
+		<tr>
+			<td>
+				{{ forloop.counter }}. <!-- licznik foreach template-->
+			</td>
+			<td>
+				<a href="{% url 'kolekcja' kolekcja.id %}" style="color: #8c3c55; font-style: italic;">{{ kolekcja.nazwa_kolekcji }}</a> </br>
+				{{ kolekcja.opis }} </br>
+				utworzono: {{ kolekcja.data_utworzenia }} </br>
+				zmodyfikowano: {{ kolekcja.data_modyfikacji }}
+			</td>
+			<td>
+				<a href="{% url 'edytuj_kolekcje' kolekcja.id %}">
+				<i class="fa fa-pencil-square-o fa-fw"></i>
+				Edytuj</a>
+			</td>
+			<td>
+				<a href="{% url 'usun_kolekcje' kolekcja.id %}" onClick="return confirm('Czy na pewno chcesz usunąć tą kolekcję?');">
+				<i class="fa fa-trash fa-fw"></i>
+				Usuń</a>
+			</td>
+			<td>
+				<a href="{% url 'kolekcja' kolekcja.id %}">
+				<i class="fa fa-eye fa-fw"></i>
+				Zobacz</a>
+			</td>
+		</tr>
+	{% endfor %}
+	</table>
+	
 	<br />
 	
 	<div>
