--- a/InzApp/templates/InzApp/wyniki_wyszukiwania.html
+++ b/InzApp/templates/InzApp/wyniki_wyszukiwania.html
@@ -9,11 +9,11 @@
 	{% endblock %}
 	
 	{% block naglowek %}
-	<h1>Wyniki wyszukiwania</h1>
+	Wyniki wyszukiwania
 	{% endblock %}
 	
 	{% block opis %}
-	<p>Wyniki Twojego wyszukiwania.</p>
+	Wyniki Twojego wyszukiwania.
 	{% endblock %}
 	
 	{% block dodatkowe_skrypty %}
@@ -33,50 +33,50 @@
 		ustaw_aktywny_w_menu(1);
 	</script> 
 	
-	<div>
-		<table class="tablesorter" id="wyniki_wyszukiwania_publikacji">
-			<thead>
-			<tr>
-				<th>#</th>
-				<th>Tytuł</th>
-				<th>Autor</th>
-				<th>Rodzaj</th>
-				<th>Dziedzina</th>
-				<th>Język</th>
-				<th>Słowa kluczowe</th>
-				<th>Opis</th>
-				<th>Widoczność</th>
-				<th></th>
-			</tr>
-			</thead>
-			<tbody>
-			{% for publikacja in wyszukane_publikacje %}
-			<tr>
-				<td {% if publikacja.utworzyl == zalogowany.login %}
-						class="moja_publikacja"
-					{% endif %}
-				>{{ forloop.counter }}</td>
-				<td>{{ publikacja.tytul }}</td>
-				<td>{{ publikacja.autor.imie }} {{ publikacja.autor.nazwisko }}</td>
-				<td>{{ publikacja.get_rodzaj_display }}</td>
-				<td>{{ publikacja.dziedzina }}</td>
-				<td>{{ publikacja.jezyk }}</td>
-				<td>{{ publikacja.slowa_kluczowe }}</td>
-				<td>{{ publikacja.opis }}</td>
-				<td>
-					{% if publikacja.czy_publiczna == True %}
-						<div class="widocznosc_publiczna">PUBLICZNA</div>
-					{% else %}
-						<div class="widocznosc_prywatna">PRYWATNA</div>
-					{% endif %}
-				</td>
-				<td>
-					<a href="{% url 'publikacja' publikacja.id %}">Zobacz szczegóły...</a>
-				</td>
-			</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-	</div>
+	
+	<table class="tablesorter" id="wyniki_wyszukiwania_publikacji">
+		<thead>
+		<tr>
+			<th>#</th>
+			<th>Tytuł</th>
+			<th>Autor</th>
+			<th>Rodzaj</th>
+			<th>Dziedzina</th>
+			<th>Język</th>
+			<th>Słowa kluczowe</th>
+			<th>Opis</th>
+			<th>Widoczność</th>
+			<th></th>
+		</tr>
+		</thead>
+		<tbody>
+		{% for publikacja in wyszukane_publikacje %}
+		<tr>
+			<td {% if publikacja.utworzyl == zalogowany.login %}
+					class="moja_publikacja"
+				{% endif %}
+			>{{ forloop.counter }}</td>
+			<td>{{ publikacja.tytul }}</td>
+			<td>{{ publikacja.autor.imie }} {{ publikacja.autor.nazwisko }}</td>
+			<td>{{ publikacja.get_rodzaj_display }}</td>
+			<td>{{ publikacja.dziedzina }}</td>
+			<td>{{ publikacja.jezyk }}</td>
+			<td>{{ publikacja.slowa_kluczowe }}</td>
+			<td>{{ publikacja.opis }}</td>
+			<td>
+				{% if publikacja.czy_publiczna == True %}
+					<div class="widocznosc_publiczna">PUBLICZNA</div>
+				{% else %}
+					<div class="widocznosc_prywatna">PRYWATNA</div>
+				{% endif %}
+			</td>
+			<td>
+				<a href="{% url 'publikacja' publikacja.id %}">Zobacz szczegóły...</a>
+			</td>
+		</tr>
+		{% endfor %}
+		</tbody>
+	</table>
+	
 	{% endblock %}
 	
