--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -58,7 +58,7 @@
 					<ul id="lista_menu">
 						<li><a href="{% url 'strona_glowna' %}"><i class="fa fa-home fa-fw fa-lg"></i>
 						Strona główna</a></li>
-						<li><a href="{% url 'publikacje' %}"><i class="fa fa-book fa-fw fa-lg"></i>
+						<li><a href="{% url 'publikacje' 1 %}"><i class="fa fa-book fa-fw fa-lg"></i>
 						Publikacje</a></li>
 						<li><a href="{% url 'moje_publikacje' %}">Moje publikacje</a></li>
 						<li><a href="{% url 'dodaj_publikacje' %}">Dodaj publikację</a></li>
