--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -66,7 +66,10 @@
 						Kolekcje</a></li>
 						<li><a href="{% url 'moje_kolekcje' %}">Moje kolekcje</a></li>
 						<li><a href="{% url 'dodaj_kolekcje' %}">Dodaj kolekcję</a></li>
-						
+						<li><a href="{% url 'autorzy' %}"><i class="fa fa-users fa-fw fa-lg"></i>
+						Autorzy</a></li>
+						<li><a href="{% url 'dodaj_autora' %}"><i class="fa fa-user-plus fa-fw fa-lg"></i>
+						Dodaj autora</a></li>
 					</ul>
 				</div>
 			</div>
